--- a/macosx/Resources/Base.lproj/CheatWindow.xib
+++ b/macosx/Resources/Base.lproj/CheatWindow.xib
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.Cocoa.XIB" version="3.0" toolsVersion="6249" systemVersion="14A386b" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none" useAutolayout="YES">
+<document type="com.apple.InterfaceBuilder3.Cocoa.XIB" version="3.0" toolsVersion="6250" systemVersion="14A389" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none" useAutolayout="YES">
     <dependencies>
         <deployment identifier="macosx"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="6249"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="6250"/>
     </dependencies>
     <objects>
         <customObject id="-2" userLabel="File's Owner" customClass="CheatController">
@@ -362,11 +362,19 @@ Gw
             </view>
         </window>
         <arrayController objectClassName="NSMutableArray" avoidsEmptySelection="NO" id="219" userLabel="Cheat Values">
+            <declaredKeys>
+                <string>cheatAddress</string>
+                <string>cheatValue</string>
+            </declaredKeys>
             <connections>
                 <binding destination="-2" name="contentArray" keyPath="self.tempCheatCodes" id="222"/>
             </connections>
         </arrayController>
         <arrayController objectClassName="NSMutableArray" avoidsEmptySelection="NO" id="237" userLabel="Cheats">
+            <declaredKeys>
+                <string>cheatName</string>
+                <string>enabled</string>
+            </declaredKeys>
             <connections>
                 <binding destination="-2" name="contentArray" keyPath="self.cheats" id="238"/>
             </connections>
